WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101029
Fix build warning [-Wswitch]
https://bugs.webkit.org/show_bug.cgi?id=101029
Summary
Fix build warning [-Wswitch]
Jinwoo Song
Reported
2012-11-02 02:12:28 PDT
/home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/css/StyleSheetContents.cpp:421:16: warning: enumeration value ‘Viewport’ not handled in switch [-Wswitch]
Attachments
Patch
(1.54 KB, patch)
2012-11-02 02:27 PDT
,
Jinwoo Song
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jinwoo Song
Comment 1
2012-11-02 02:27:39 PDT
Created
attachment 172012
[details]
Patch
Thiago Marcos P. Santos
Comment 2
2012-11-02 03:04:45 PDT
Comment on
attachment 172012
[details]
Patch LGTM.
Alexey Proskuryakov
Comment 3
2012-11-02 10:47:16 PDT
Comment on
attachment 172012
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172012&action=review
> Source/WebCore/ChangeLog:6 > + Reviewed by NOBODY (OOPS!).
You should have marked the patch for review, not just commit queue. Commit queue won't land a patch with this line unless it's marked r+. I'll mark it r+, because it seems clear that this was your intention.
WebKit Review Bot
Comment 4
2012-11-02 10:58:06 PDT
Comment on
attachment 172012
[details]
Patch Clearing flags on attachment: 172012 Committed
r133316
: <
http://trac.webkit.org/changeset/133316
>
WebKit Review Bot
Comment 5
2012-11-02 10:58:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug