Fix build warning [-Wswitch] https://bugs.webkit.org/show_bug.cgi?id=101029

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2012-11-02
Reviewed by Alexey Proskuryakov.

Fix build warning message: enumeration value ‘Viewport’ not handled in switch [-Wswitch]
in Source/WebCore/css/StyleSheetContents.cpp.
Add case statement for 'Viewport' with the CSS_DEVICE_ADAPTATION macro.

* css/StyleSheetContents.cpp:
(WebCore::childRulesHaveFailedOrCanceledSubresources):

Canonical link: https://commits.webkit.org/119169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133316 268f45cc-cd09-0410-ab3c-d52691b4dbfc